src/bindings.rs

extern "C" {
    #[doc = " \\brief An AV server sends audio data to an AV client"]
    #[doc = ""]
    #[doc = " \\details An AV server uses this function to send audio data to AV client"]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be sent"]
    #[doc = " \\param cabAudioData [in] The audio data to be sent"]
    #[doc = " \\param nAudioDataSize [in] The size of the audio data"]
    #[doc = " \\param cabFrameInfo [in] The audio frame information to be sent"]
    #[doc = " \\param nFrameInfoSize [in] The size of the audio frame information"]
    #[doc = ""]
    #[doc = " \\return #AV_ER_NoERROR if sending successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or frame data is null"]
    #[doc = "\t\t\t- #AV_ER_CLIENT_NOT_SUPPORT An AV client uses this function to send frame data"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session of this AV channel is not valid"]
    #[doc = "\t\t\t- #AV_ER_CLIENT_NO_AVLOGIN An AV client does not pass authentication yet"]
    #[doc = "\t\t\t- #AV_ER_MEM_INSUFF Insufficient memory for allocation"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_SIZE The audio data and frame info to be sent exceeds"]
    #[doc = "\t\t\t\t#AV_MAX_AUDIO_DATA_SIZE"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avSendFrameData()"]
    #[doc = ""]
    pub fn avSendAudioData(
        nAVChannelID: ::std::os::raw::c_int,
        cabAudioData: *const ::std::os::raw::c_char,
        nAudioDataSize: ::std::os::raw::c_int,
        cabFrameInfo: *const ::std::os::raw::c_void,
        nFrameInfoSize: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Set interval of sending video data in AV server"]
    #[doc = ""]
    #[doc = " \\details An AV server how to send video data to AV client."]
    #[doc = "\t\t\tIt determined the delay time at regular interval between how many packets."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be sent"]
    #[doc = " \\param nPacketNum [in] How many number of packet as a regular interval"]
    #[doc = " \\param nDelayMs [in] Delay time in unit of million-second"]
    #[doc = ""]
    #[doc = " \\return #AV_ER_NoERROR if set successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid"]
    #[doc = ""]
    #[doc = ""]
    pub fn avServSetDelayInterval(
        nAVChannelID: ::std::os::raw::c_int,
        nPacketNum: ::std::os::raw::c_ushort,
        nDelayMs: ::std::os::raw::c_ushort,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Start an AV client"]
    #[doc = ""]
    #[doc = " \\details Start an AV client by providing view account and password."]
    #[doc = "\t\t\tIt shall pass the authentication of the AV server before receiving"]
    #[doc = "\t\t\tAV data."]
    #[doc = ""]
    #[doc = " \\param nIOTCSessionID [in] The session ID of the IOTC session to start AV client"]
    #[doc = " \\param cszViewAccount [in] The view account for authentication"]
    #[doc = " \\param cszViewPassword [in] The view password for authentication"]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of second"]
    #[doc = "\t\t\t\t\t\tSpecify it as 0 will make this AV client try connection"]
    #[doc = "\t\t\t\t\t\tonce and this process will exit immediately if not"]
    #[doc = "\t\t\t\t\t\tconnection is unsuccessful."]
    #[doc = " \\param pnServType [out] The user-defined service type set when an AV server"]
    #[doc = "\t\t\t\t\t\tstarts. Can be NULL."]
    #[doc = " \\param nIOTCChannelID [in] The channel ID of the channel to start AV client"]
    #[doc = ""]
    #[doc = " \\return AV channel ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The IOTC session ID is incorrect or reuse of IOTC session ID"]
    #[doc = "              and IOTC channel ID."]
    #[doc = "\t\t\t- #AV_ER_NOT_INITIALIZED AV module is not initialized yet"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_CHANNEL The number of AV channels has reached maximum"]
    #[doc = "\t\t\t- #AV_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #AV_ER_SERV_NO_RESPONSE The AV server has no response"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session ID is not valid"]
    #[doc = "\t\t\t- #AV_ER_CLIENT_EXIT Users stop this function with avClientExit() in another thread"]
    #[doc = "\t\t\t- #AV_ER_TIMEOUT The timeout specified by nTimeout expires before"]
    #[doc = "\t\t\t\tAV start is performed completely"]
    #[doc = "\t\t\t- #AV_ER_WRONG_VIEWACCorPWD The client fails in authentication due"]
    #[doc = "\t\t\t\tto incorrect view account or password"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avClientStop(), avClientExit()"]
    #[doc = ""]
    #[doc = " \\attention (1) This function is a block process.<br><br>"]
    #[doc = "\t\t\t\t (2) The IOTC channel of specified channel ID will be turned on automatically"]
    #[doc = "\t\t\t\tby avClientStart()."]
    #[doc = ""]
    pub fn avClientStart(
        nIOTCSessionID: ::std::os::raw::c_int,
        cszViewAccount: *const ::std::os::raw::c_char,
        cszViewPassword: *const ::std::os::raw::c_char,
        nTimeout: ::std::os::raw::c_uint,
        pnServType: *mut ::std::os::raw::c_uint,
        nIOTCChannelID: ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Start an AV client"]
    #[doc = ""]
    #[doc = " \\details Start an AV re-send supported client by providing view account and password."]
    #[doc = "\t\t\tIt shall pass the authentication of the AV server before receiving"]
    #[doc = "\t\t\tAV data. Whether the re-send mechanism is enabled or not depends on AV server settings"]
    #[doc = "          and will set the result into pnResend parameter."]
    #[doc = ""]
    #[doc = " \\param nIOTCSessionID [in] The session ID of the IOTC session to start AV client"]
    #[doc = " \\param cszViewAccount [in] The view account for authentication"]
    #[doc = " \\param cszViewPassword [in] The view password for authentication"]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of second"]
    #[doc = "\t\t\t\t\t\tSpecify it as 0 will make this AV client try connection"]
    #[doc = "\t\t\t\t\t\tonce and this process will exit immediately if not"]
    #[doc = "\t\t\t\t\t\tconnection is unsuccessful."]
    #[doc = " \\param pnServType [out] The user-defined service type set when an AV server"]
    #[doc = "\t\t\t\t\t\tstarts. Can be NULL."]
    #[doc = " \\param nIOTCChannelID [in] The channel ID of the channel to start AV client"]
    #[doc = " \\param pnResend [out] Set the re-send is enabled or not."]
    #[doc = ""]
    #[doc = " \\return AV channel ID if return value >= 0"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The IOTC session ID is incorrect or reuse of IOTC session ID"]
    #[doc = "and IOTC channel ID."]
    #[doc = "\t\t\t- #AV_ER_NOT_INITIALIZED AV module is not initialized yet"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_CHANNEL The number of AV channels has reached maximum"]
    #[doc = "\t\t\t- #AV_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = "\t\t\t- #AV_ER_SERV_NO_RESPONSE The AV server has no response"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session ID is not valid"]
    #[doc = "\t\t\t- #AV_ER_CLIENT_EXIT Users stop this function with avClientExit() in another thread"]
    #[doc = "\t\t\t- #AV_ER_TIMEOUT The timeout specified by nTimeout expires before"]
    #[doc = "\t\t\t\tAV start is performed completely"]
    #[doc = "\t\t\t- #AV_ER_WRONG_VIEWACCorPWD The client fails in authentication due"]
    #[doc = "\t\t\t\tto incorrect view account or password"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avClientStop(), avClientExit()"]
    #[doc = ""]
    #[doc = " \\attention (1) This function is a block process.<br><br>"]
    #[doc = "\t\t\t  (2) The IOTC channel of specified channel ID will be turned on automatically"]
    #[doc = "\t\t\t\t  by avClientStart2().<br><br>"]
    #[doc = "            (3) If AV client uses avClientStart2() to enable AV re-send mechanism, it has"]
    #[doc = "                to use avRecvFrameData2() to receive video data."]
    #[doc = ""]
    pub fn avClientStart2(
        nIOTCSessionID: ::std::os::raw::c_int,
        cszViewAccount: *const ::std::os::raw::c_char,
        cszViewPassword: *const ::std::os::raw::c_char,
        nTimeout: ::std::os::raw::c_uint,
        pnServType: *mut ::std::os::raw::c_uint,
        nIOTCChannelID: ::std::os::raw::c_uchar,
        pnResend: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by an AV client exit avClientStart() process"]
    #[doc = ""]
    #[doc = " \\details Since avClientStart() is a block process and"]
    #[doc = "\t\t\tthat means the caller has to wait for AV start or specified timeout"]
    #[doc = "\t\t\texpires\tbefore these two functions return. In some cases,"]
    #[doc = "\t\t\tcaller may want\tto exit AV start process immediately by this"]
    #[doc = "\t\t\tfunction in another thread."]
    #[doc = ""]
    #[doc = " \\param nIOTCSessionID [in] The session ID of the IOTC session to exit AV start process"]
    #[doc = " \\param nIOTCChannelID [in] The channel ID of the channel to exit AV start process"]
    #[doc = ""]
    pub fn avClientExit(
        nIOTCSessionID: ::std::os::raw::c_int,
        nIOTCChannelID: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    #[doc = " \\brief Stop an AV client"]
    #[doc = ""]
    #[doc = " \\details An AV client stop AV channel by this function if this channel is"]
    #[doc = "\t\t\tno longer required."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to be stopped"]
    #[doc = ""]
    pub fn avClientStop(nAVChannelID: ::std::os::raw::c_int);
}
